fixed multi-axis collapsing row

--- a/charted.less
+++ b/charted.less
@@ -13,7 +13,7 @@
 		border-spacing: 0;
 	}
 	
-	.chart-yaxes, .chart-viewport-td,.chart-yaxis {
+	.chart-yaxes, .chart-viewport-td{
 		display:inline-block;
 		vertical-align:top;
 		padding:0;
